<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="match_parent">
<TextView  
    android:layout_width="fill_parent" 
    android:text="@string/hello"
    android:layout_weight="1" android:layout_height="0dp"/>
<LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout2" android:layout_weight="1" android:layout_height="0dp">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/linearLayout3" android:layout_weight="1" android:orientation="vertical">
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/player" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/playerName"></TextView>
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="0" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/playerScore" android:textSize="72sp"></TextView>
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:id="@+id/linearLayout4" android:layout_weight="1" android:orientation="vertical" android:layout_gravity="top">
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/computerPlayer" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/oppenentName"></TextView>
        <TextView android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="0" android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/opponentScore" android:textSize="72sp"></TextView>
    </LinearLayout>
</LinearLayout>
<LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_weight="1" android:layout_height="0dp">
    <Button android:layout_height="wrap_content" android:text="@string/rock" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/rockButton"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/paper" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/paperButton"></Button>
    <Button android:layout_height="wrap_content" android:text="@string/scissors" android:layout_weight="1" android:layout_width="0dp" android:id="@+id/scissorsButton"></Button>
</LinearLayout>
</LinearLayout>
